@@ -13,7 +13,7 @@ TARGETCFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
 TARGETLDFLAGS = "-L$(HOME)/local-$(HOSTNAME)/lib"
 
 # cross-tools are installed
-####OTHERTARGETS = i586-mingw32msvc i386-unknown-linux2.5
+OTHERTARGETS = x86_64-w64-mingw32
 
 # for backward compatibility
 # FC6 uses --hash-style=gnu by default
