@@ -1,10 +1,14 @@
-2011-08-26 Borut Razem <borut.razem AT gmail.com>
+2011-08-31 Borut Razem <borut.razem AT gmail.com>
 
-	* sdcc-build-bootstrap.sh: don't use poshd/popd
+	* local/cf-x86-x86_64-w64-mingw32.mk, local/cf-x86.mk:
+	  added Windows 64bit mingw_w64 cross-compilation
+	* local/cf-x86-i386-unknown-linux2.5.mk,
+	  local/cf-x86-i586-mingw32msvc.mk: moved to local/old
 
 2011-08-26 Borut Razem <borut.razem AT gmail.com>
 
 	* sdcc-build-bootstrap.sh: don't use "make -C"
+	* sdcc-build-bootstrap.sh: don't use poshd/popd
 
 2011-08-24 Borut Razem <borut.razem AT gmail.com>
 
